--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -47,6 +47,8 @@ jobs:
     name: Deploy
     runs-on: self-hosted
     steps:
+      - uses: actions/checkout@v3
+
       - name: docker login
         uses: docker/login-action@v1
         with:
@@ -57,10 +59,7 @@ jobs:
         run: docker pull ${{ env.DOCKER_USERNAME }}/devops_step2
 
       - name: docker compose 실행
-        run: |
-          git clone https://github.com/dagyeomJung/kosa-devops-step2.git
-          cd ~/kosa-devops-step2
-          docker compose -f docker-compose_nginx.yml up -d
+        run: docker compose -f docker-compose_nginx.yml up -d
         
 
     
