--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -47,14 +47,21 @@ jobs:
     name: Deploy
     runs-on: self-hosted
     steps:
+      # copy yml file from src
       - uses: actions/checkout@v3
+        with:
+          sparse-checkout: |
+            docker-compose_nginx.yml
+          sparse-checkout-cone-mode: false
+          clean: true
 
       - name: docker login
         uses: docker/login-action@v1
         with:
           username: ${{ env.DOCKER_USERNAME }}
           password: ${{ secrets.DOCKER_PASSWORD }}
-      
+
+          
       - name: docker image pull
         run: docker pull ${{ env.DOCKER_USERNAME }}/devops_step2
 
