--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -52,6 +52,7 @@ jobs:
         with:
           sparse-checkout: |
             docker-compose_nginx.yml
+            nginx/nginx.conf
           sparse-checkout-cone-mode: false
           clean: true
 
