--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -31,7 +31,7 @@ jobs:
         run: ./gradlew bootJar 
       
       - name: docker image 설정
-        run: docker build -t ${{ env.DOCKER_USERNAME }}/devops_step2 .
+        run: docker build -t ${{ env.DOCKER_USERNAME }}/devops_step2:v3.0 .
 
       - name: docker login
         uses: docker/login-action@v1
@@ -40,7 +40,7 @@ jobs:
           password: ${{ secrets.DOCKER_PASSWORD }}
       
       - name: docker image 허브에 저장
-        run: docker push ${{ env.DOCKER_USERNAME }}/devops_step2
+        run: docker push ${{ env.DOCKER_USERNAME }}/devops_step2:v3.0
   
   deploy:
     needs: build
@@ -64,7 +64,7 @@ jobs:
 
           
       - name: docker image pull
-        run: docker pull ${{ env.DOCKER_USERNAME }}/devops_step2
+        run: docker pull ${{ env.DOCKER_USERNAME }}/devops_step2:v3.0
 
       - name: docker compose 실행
         run: docker compose -f docker-compose_nginx.yml up -d
