--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -46,7 +46,9 @@ jobs:
         uses: actions/upload-artifact@v4
         with:
           name: my-artifact
-          path: docker-compose_nginx.yml      
+          path: |
+            docker-compose_nginx.yml      
+            nginx/nginx.conf
       
   
   deploy:
