--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -10,16 +10,19 @@ env:
 
 jobs:
   build:
-    runs-on: ubuntu-latest
+    # runs-on: ubuntu-latest
+    runs-on: self-hosted
+
 
     steps:
       - uses: actions/checkout@v3
 
-      - name: Setup JDK17 
-        uses: actions/setup-java@v3
-        with:
-          java-version: '17'
-          distribution: 'temurin'
+      # # 빌드서버에 이미 있을땐 설치할 필요 없음. 
+      # - name: Setup JDK17 
+      #   uses: actions/setup-java@v3
+      #   with:
+      #     java-version: '17'
+      #     distribution: 'temurin'
         
       - name: gradlew 파일 실행 권한 설정 
         run: chmod +x gradlew
