--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -12,8 +12,11 @@ jobs:
   build:
     # runs-on: ubuntu-latest
     runs-on: self-hosted
-
-
+    
+    defaults:
+      run:
+        working-directory: kosa-devops-step2
+    
     steps:
       - uses: actions/checkout@v3
 
