--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -12,10 +12,10 @@ jobs:
   build:
     # runs-on: ubuntu-latest
     runs-on: self-hosted
-    
-    defaults:
-      run:
-        working-directory: kosa-devops-step2
+
+    # defaults:
+    #   run:
+    #     working-directory: kosa-devops-step2
     
     steps:
       - uses: actions/checkout@v3
