--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -1,60 +1,71 @@
-name: seyeon CI CD
+name: Spring boot docker image CI/CD
 
 on:
   push:
     branches: [ main ]
 
 env:
-  DOCKER_USERNAME: ${{ vars.DOCKER_USERNAME }}
-  DOCKER_PASSWORD: ${{ secrets.DOCKER_PASSWORD }}
-
+  DOCKER_USERNAME: ${{secrets.DOCKER_USERNAME}}
+  DOCKER_PASSWORD: ${{secrets.DOCKER_PASSWORD}}
+  
 jobs:
   build:
-    # runs-on: ubuntu-latest
+#    runs-on: ubuntu-latest
     runs-on: self-hosted
 
-    # defaults:
-    #   run:
-    #     working-directory: kosa-devops-step2
-    
     steps:
-      - uses: actions/checkout@v3
-
-      # # 빌드서버에 이미 있을땐 설치할 필요 없음. 
-      # - name: Setup JDK17 
-      #   uses: actions/setup-java@v3
-      #   with:
-      #     java-version: '17'
-      #     distribution: 'temurin'
+    # 소스 복사 
+    #- name: 소스 복사 
+    #  run: git clone https://github.com/masungil70/kosa-devops-step2
+    #- uses: actions/checkout@v3
+    - name: 폴더 정리  
+      run: rm -rf kosa-devops-step2
+  
+    - name: 소스 복사 
+      run: git clone https://github.com/seyeon6302/kosa-devops-step2
+  
+    #- name: Setup JDK17 
+    #  uses: actions/setup-java@v3
+    #  with:
+    #    java-version: '17'
+    #    distribution: 'temurin'
+    
+    - name: gradlew 파일 실행 권한 설정 
+      run: |
+        cd kosa-devops-step2
+        chmod +x gradlew
         
-      - name: gradlew 파일 실행 권한 설정 
-        run: chmod +x gradlew
-          
-      - name: Test with gradle
-        run: ./gradlew --info test
-      
-      - name: Spring boot  실행 파일 생성 '
-        run: ./gradlew bootJar 
-      
-      - name: docker image 설정
-        run: docker build -t ${{ env.DOCKER_USERNAME }}/devops_step2:v3.0 .
+    - name: Test with gradle
+      run: |
+        cd kosa-devops-step2
+        ./gradlew --info test
+     
+    - name: Spring boot  실행 파일 생성 '
+      run: |
+        cd kosa-devops-step2
+        ./gradlew bootJar 
+        
+    - name: docker image 생성 
+      run: |
+        cd kosa-devops-step2
+        docker build -t ${{env.DOCKER_USERNAME}}/devops_step2 .
 
-      - name: docker login
-        uses: docker/login-action@v1
-        with:
-          username: ${{ env.DOCKER_USERNAME }}
-          password: ${{ secrets.DOCKER_PASSWORD }}
-      
-      - name: docker image 허브에 저장
-        run: docker push ${{ env.DOCKER_USERNAME }}/devops_step2:v3.0
-
-      - name: 파일 업로드 
-        uses: actions/upload-artifact@v4
-        with:
-          name: my-artifact
-          path: |
-            docker-compose_nginx.yml      
-            nginx/nginx.conf
+    - name: docker login
+      uses: docker/login-action@v1
+      with:
+        username: ${{env.DOCKER_USERNAME}}
+        password: ${{secrets.DOCKER_PASSWORD}}
+        
+    - name: docker image 허브에 저장 
+      run: docker push ${{env.DOCKER_USERNAME}}/devops_step2
+    
+    # - name: 파일 업로드 
+    #   uses: actions/upload-artifact@v4
+    #   with:
+    #     name: my-artifact
+    #     path: |
+    #       kosa-devops-step2/docker-compose_nginx.yml
+    #       kosa-devops-step2/nginx/nginx.conf
       
   
   deploy:
@@ -71,24 +82,30 @@ jobs:
       #     sparse-checkout-cone-mode: false
       #     clean: true
       
-      - name: 파일 다운로드
-        uses: actions/download-artifact@v4
-        with: 
-          name: my-artifact
+      # - name: 파일 다운로드
+      #   uses: actions/download-artifact@v4
+      #   with: 
+      #     name: my-artifact
           # path: docker-compose_nginx.yml
 
-      - name: docker login
-        uses: docker/login-action@v1
-        with:
-          username: ${{ env.DOCKER_USERNAME }}
-          password: ${{ secrets.DOCKER_PASSWORD }}
+      # - name: docker login
+      #   uses: docker/login-action@v1
+      #   with:
+      #     username: ${{ env.DOCKER_USERNAME }}
+      #     password: ${{ secrets.DOCKER_PASSWORD }}
 
           
-      - name: docker image pull
-        run: docker pull ${{ env.DOCKER_USERNAME }}/devops_step2:v3.0
+      # - name: docker image pull
+      #   run: docker pull ${{ env.DOCKER_USERNAME }}/devops_step2:v3.0
 
-      - name: docker compose 실행
-        run: docker compose -f docker-compose_nginx.yml up -d
+      # - name: docker compose 실행
+      #   run: docker compose -f docker-compose_nginx.yml up -d
+
+      - name: 운영서버로 파일 복사 및 실행  
+        run: |
+          scp docker-compose_nginx.yml aws-master
+          scp -r nginx/nginx.conf aws-master
+          ssh aws-master ./run.sh > /dev/null
         
 
     
