--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -4,6 +4,10 @@ on:
   push:
     branches: [ main ]
 
+defaults:
+  run:
+    working-directory: /home/kosa/devops-runner/_work/kosa-devops-step2
+
 env:
   DOCKER_USERNAME: ${{ vars.DOCKER_USERNAME }}
   DOCKER_PASSWORD: ${{ secrets.DOCKER_PASSWORD }}
@@ -15,17 +19,11 @@ jobs:
     steps:
       - uses: actions/checkout@v3
 
-      # # 빌드서버에 이미 있을땐 설치할 필요 없음. 
-      # - name: Setup JDK17 
-      #   uses: actions/setup-java@v3
-      #   with:
-      #     java-version: '17'
-      #     distribution: 'temurin'
+      - name: git clone하기 
+        run: git clone https://github.com/dagyeomJung/kosa-devops-step2.git
 
       - name: 현재 디렉토리 확인
-        run: ls -al    
-      
-      - run: find . -name gradlew
+        run: ls -al  && pwd  
 
       - name: gradlew 파일 실행 권한 설정 
         run: chmod +x gradlew
