--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -19,10 +19,10 @@ jobs:
     steps:
       - uses: actions/checkout@v3
 
-      - name: git clone하기 
-        run: |
-          rm -rf kosa-devops-step2
-          git clone https://github.com/dagyeomJung/kosa-devops-step2.git
+      # - name: git clone하기 
+        # run: |
+        #   rm -rf kosa-devops-step2
+        #   git clone https://github.com/dagyeomJung/kosa-devops-step2.git
 
       - name: 현재 디렉토리 확인
         run: ls -al  && pwd  
